--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,11 @@ h1 {
 color: rgb(14, 0, 67);
 text-align: center;
 }
+.projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
+.project {
+width: 30%;
+margin: 10px;
+padding: 20px 10px;
+background: white; /* pick a color */
+border-radius: 25%;
+}
