--- a/resume_styles.css
+++ b/resume_styles.css
@@ -3,4 +3,9 @@ section-title {
   font-size: 1.5em;
   margin-bottom: 10px;
   color: #000000;
+  font-weight: bold;
+}
+.header {
+  text-align: center;
+  margin-bottom: 30px;
 }
