--- a/resume_styles.css
+++ b/resume_styles.css
@@ -1,4 +1,4 @@
-section-title {
+.section-title {
   text-align: center;
   font-size: 1.5em;
   margin-bottom: 10px;
@@ -8,4 +8,8 @@ section-title {
 .header {
   text-align: center;
   margin-bottom: 30px;
+}
+.section-subcontent {
+  float: right;
+  font-style: italic;
 }
